# PaddleOCRAndroidApp

./: .gitignore  README.md  build.gradle  gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md  ch_PP-OCRv4_mobile_cls.nb  ch_ppocr_mobile_v2.0_cls_slim_opt.nb  ch_ppocr_mobile_v2.0_det_slim_opt.nb  ch_ppocr_mobile_v2.0_rec_slim_opt.nb  config.txt
app/src/main/cpp/: CMakeLists.txt  ocr_jni.cpp  ocr_native.cpp
app/src/main/java/com/example/paddleocrapp/: OCRApplication.kt
app/src/main/java/com/example/paddleocrapp/adapter/: ImageGridAdapter.kt  PageAdapter.kt
app/src/main/java/com/example/paddleocrapp/model/: ImageItem.kt  PageData.kt
app/src/main/java/com/example/paddleocrapp/ocr/: Classifier.kt  Detector.kt  ImagePreprocessor.kt  MLKitEngine.kt  ModelDownloader.kt  OCRConfig.kt  OCREngine.kt  OCRManager.kt  OCRNative.kt  OCRResult.kt  PaddleLiteLoader.kt  PaddleLitePredictor.kt  Recognizer.kt  TesseractEngine.kt  TextBox.kt  TextPostProcessor.kt
app/src/main/java/com/example/paddleocrapp/ui/: BatchImportActivity.kt  MainActivity.kt  SettingsActivity.kt  TextResultActivity.kt
app/src/main/java/com/example/paddleocrapp/utils/: BitmapUtils.kt  FileExporter.kt  ImagePicker.kt  PermissionHelper.kt
app/src/main/java/com/example/paddleocrapp/viewmodel/: MainViewModel.kt  TextResultViewModel.kt
app/src/main/res/drawable/: ic_add.xml  ic_copy.xml  ic_image_error.xml  ic_image_placeholder.xml
app/src/main/res/layout/: activity_batch_import.xml  activity_main.xml  activity_settings.xml  activity_text_result.xml  item_image_grid.xml  item_page.xml
app/src/main/res/menu/: menu_result.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
